add events master. add email admin master.
